--- a/sections/6-conclusao.tex
+++ b/sections/6-conclusao.tex
@@ -34,5 +34,5 @@ Os itens abaixo, apresenta os possíveis incrementos futuros na arquitetura para
 
 	\item Permitir que durante o desenvolvimento em modo Desktop, as alterações nos arquivos dos plugins sejam identificadas e carregadas a cada execução da aplicação, não exigindo o \textit{rebuild} do projeto, similar ao que acontece com os arquivos mapeados no \textit{qrc}. Atualmente, os plugins são copiados para o diretório do executável somente durante o \textit{build};
 
-	\item Utilizar o \textit{Observer} como único mecanismo de comunicação entre objetos, pois o \textit{Observer} já está disponível na arquitetura mais não está sendo utilizado entre os componentes internos. As classes \textit{Subject} e \textit{Observer} em \textit{src/core} foram implementadas para melhorar ainda mais o mecanismo de comunicação por eventos reduzindo o \textit{overhead} na aplicação notificando somente os objetos interessados no evento, ao contrário do que ocorre atualmente.
+	\item Utilizar o \textit{Observer} como único mecanismo de comunicação entre objetos, descartando o uso do sinal \textit{eventNotify} da classe \textit{App}. O \textit{Observer} já está disponível na arquitetura mais não está sendo utilizado entre os componentes internos. As classes \textit{Subject} e \textit{Observer} em \textit{src/core} foram implementadas para oferecer um mecanismo de comunicação por eventos reduzindo o \textit{overhead} na aplicação notificando somente os objetos interessados no evento.
 \end{enumerate}
