--- a/main.tex
+++ b/main.tex
@@ -42,7 +42,7 @@
 
 % add sintax highlight to qml code
 \lstdefinelanguage{qml} {
-	morekeywords={Item, property, Component, Components, onCompleted, var, Connections, target, onEventNotify, if, else, RequestHttp, import, baseUrl, basicAuthorizationUser, basicAuthorizationPassword, onError, Database, id, jsonColumns, tableName, pkColumn, onItemLoaded, text, Label, Image, Column, spacing},
+	morekeywords={Item, property, Component, Components, onCompleted, var, Connections, target, onEventNotify, if, else, RequestHttp, import, baseUrl, basicAuthorizationUser, basicAuthorizationPassword, onError, Database, id, jsonColumns, tableName, pkColumn, onItemLoaded, text, Label, Image, Column, spacing, hasListView, absPath, title, toolBarState, onRequestFinished, console},
 	keywordstyle=\color{red},
 	showstringspaces=true,
 	basicstyle=\small,
