Adicionado revisão nas seções 4.18, 6.1 e 6.2

--- a/sections/4-solucao-desenvolvida.tex
+++ b/sections/4-solucao-desenvolvida.tex
@@ -814,9 +814,9 @@ A arquitetura dispõe de quinze componentes reusáveis para os plugins, há comp
 
 
 \subsection{Fluxo de execução}\label{sec:solucao-desenvolvida}
-A figura exibida no final da seção, demonstra o \textit{workflow} de um aplicativo baseado nesta arquitetura. As aplicações Qt possuem nas plataformas mobile, objetos \textit{Java} e \textit{ObjectiveC} no android e iOS respectivamente, que inicializam o aplicativo em cada plataforma e em seguida executam a aplicação tendo como ponto de entrada o \textit{main.cpp}.\par
+A figura exibida no final desta seção, demonstra o \textit{workflow} de um aplicativo baseado nesta arquitetura. As aplicações Qt possuem nas plataformas mobile, objetos \textit{Java} e \textit{ObjectiveC} no android e iOS respectivamente, que inicializam o aplicativo em cada plataforma e em seguida executam a aplicação tendo como ponto de entrada o \textit{main.cpp}.\par
 
-Os elementos visuais serão carregados no \textit{main.qml} que será instanciado no último passo antes de iniciar o \textit{loop} da aplicação. O \textit{main.qml} quando estiver pronto, será um objeto \textit{ApplicationWindow} do \textit{QuickControls} e poderá ser acessado na aplicação através do id \textit{window}. Tanto plugins como componentes internos poderão acessar as propriedades globais (declaradas no escopo de \textit{ApplicationWindow}) a partir dessa referência. Os \textit{listeners} serão carregados quando \textit{window} estiver pronto e poderão acessar qualquer uma de suas propriedades, tais como \textit{userProfile} ou \textit{menu}. A propriedade \textit{menu} guardará uma referência para o objeto correspondente ao menu utilizado no aplicativo.
+Os elementos visuais serão carregados no \textit{main.qml} que será instanciado no último passo antes de iniciar o \textit{loop} da aplicação. O \textit{main.qml} corresponde a \textit{ApplicationWindow} do \textit{QuickControls} e poderá ser acessado por qualquer objeto através do id \textit{window}. Os \textit{listeners} serão carregados quando \textit{window} estiver pronto e poderão acessar qualquer uma das propriedades declaradas no escopo do \textit{window}, tais como \textit{userProfile}. O \textit{window} contém dois \textit{widgets} que podem ser utilizados para exibir avisos ao usuário. Os \textit{widgets} são \textit{Snackbar} e \textit{Toast} e foram inspirados nos respectivos componentes do \textit{Material Design}. Os \textit{widgets} dispõe da função \textit{show} que exige uma string como parâmetro, essa string será o texto exibido ao usuário.\par
 
 A figura a seguir, apresenta de uma forma resumida o fluxo de inicialização e a sequência de objetos instanciados em um aplicativo baseado nesta arquitetura.
 
