--- a/sections/6-conclusao.tex
+++ b/sections/6-conclusao.tex
@@ -7,14 +7,14 @@ Aqui será apresentado as conclusões obtidos em todo o trabalho, sejam elas pos
 
 
 \subsection{Limitações Deste Trabalho}
-A lista a seguir apresenta as limitações identificadas nesta arquitetura. A implementação dessas limitações implicará em alterações diversas no núcleo da arquitetura, porém, não deve impactar nas implementações dos plugins. As limitações são decorrentes de pouca experiência com Qt, C++ e \textit{qmake}.
+A lista a seguir apresenta as limitações identificadas nesta arquitetura.
 
 \begin{enumerate}
-	\item Suporte a plugins escritos em C++: esse recurso seria importante, pois permitiria aos plugins delegar a lógica de negócio e operações de baixo nível a objetos c++, em vez de componentes qml como é atualmente. O problema é que, as classes C++ devem ser conhecidas em tempo de compilação, já que em um projeto Qt as classes C++ devem estar mapeadas no arquivo \textit{.pro} do projeto gerando um acoplamento do núcleo da aplicação com os plugins;
+	\item Não há suporte a plugins escritos em C++: esse recurso seria importante, pois permitiria aos plugins delegar a lógica de negócio e operações de baixo nível a objetos C++, em vez de componentes qml como é atualmente. O problema é que as classes C++ devem ser conhecidas em tempo de compilação, pois em um projeto Qt as classes C++ devem estar mapeadas no arquivo \textit{.pro} gerando um acoplamento do núcleo da aplicação com os plugins;
 
-	\item Instalação de plugins em \textit{runtime}: a arquitetura não suporta a instalação de plugins dinamicamente. Atualmente, os plugins devem ser empacotados durante o \textit{build} do projeto;
+	\item Instalação de plugins somente durante o \textit{build:}: a arquitetura não suporta a instalação de plugins dinamicamente. Esse recurso permitiria estender as \textit{features} do aplicativo sem precisar de um \textit{rebuild} e novo \textit{deploy};
 
-	\item Tipos de autenticação na API de rede: A arquitetura suporta apenas \textit{Basic Authentication} nas requisições HTTP e carece de outros tipos de autenticação suportados por \textit{web services} RESTful, tais como \textit{OAuth}, \textit{BEARER}, \textit{DIGEST Auth} entre outros;
+	\item Suporte somente a um tipo de autenticação na API de rede: A arquitetura suporta apenas \textit{Basic Authentication} nas requisições HTTP e carece de outros tipos de autenticação suportados por \textit{web services} RESTful, tais como \textit{OAuth}, \textit{BEARER}, \textit{DIGEST Auth} entre outros;
 
 	\item Atualização da arquitetura: Para criar um aplicativo utilizando esta arquitetura requer alteração em diversos arquivos e isso implica em obter as atualizações futuras da arquitetura, pois os arquivos modificados serão sobrescritos e o desenvolvedor terá que atualizá-los manualmente. Seria interessante que todas as alterações necessárias fossem feitas em arquivos separados e durante o \textit{build} fosse feito o merge. Em projetos android usando a versão mais recente do gradle, é possível fazer merge do arquivo \textit{AndroidManifest.xml} e o próprio arquivo \textit{build.gradle} que contém as APIs do \textit{Firebase} e outras propriedades de instalação e deploy no android.
 \end{enumerate}
@@ -24,7 +24,7 @@ A lista a seguir apresenta as limitações identificadas nesta arquitetura. A im
 Os itens abaixo, apresenta os possíveis incrementos futuros na arquitetura para facilitar ainda mais o desenvolvimento de plugins e melhorar a qualidade de um aplicativo baseado neste projeto.
 
 \begin{enumerate}
-	\item Adicionar os componentes reusáveis em um módulo estilo \textit{qmldir} para que o \textit{import} não seja baseado em uma string via \textit{qrc};
+	\item Adicionar os componentes reusáveis em um módulo estilo \textit{qmldir} para que o \textit{import} não seja feito através de uma string via \textit{qrc} e sim, via módulo similar ao \textit{import} do \textit{QtQuick};
 
 	\item Adicionar o suporte a outros métodos na API de requisições HTTP tais como \textit{PUT}, \textit{OPTIONS}, \textit{DELETE} e \textit{HEAD};
 
