Adicionado revisão na seção de referências

--- a/sections/2-referencial-bibliografico.tex
+++ b/sections/2-referencial-bibliografico.tex
@@ -36,6 +36,26 @@ Neste trabalho, arquitetura de software pode ser compreendida nas decisões de i
 %A arquitetura de um software pode ser representada de vários pontos de vista, que podem ser combinados para criar uma visão holística do sistema \cite{guideline:architectural_view}. As visões arquiteturais são diferentes formas de observar a arquitetura de um software, cada qual ressaltando aspectos específicos e relevantes conforme o papel da pessoa que está definindo a arquitetura e a etapa do processo de desenvolvimento em que ela se encontra \cite{Raymond1995}. Os requisitos funcionais implementados nesta arquitetura serão apresentados em um tópico seguinte em visões arquiteturais através de imagens e diagramas da UML. O objetivo das visões é facilitar a compreensão das partes que compõe esta arquitetura.
 
 
+%@misc{guideline:architectural_view,
+%	title 		= {Guideline: Architectural View},
+%	journal 	= {Guideline: Architectural View},
+%	note 		= "Acessado em: 04/10/2017. Disponível em: http://epf.eclipse.org/wikis/openuppt/openup_basic/guidances/guidelines/architectural_view,_T9nygClEEduLGM8dfVsrKg.html",
+%}
+
+%@Inbook{Raymond1995,
+%	author		= {Raymond, Kerry},
+%	title		= {Reference Model of Open Distributed Processing (RM-ODP): Introduction},
+%	bookTitle	= {Open Distributed Processing: Experiences with distributed environments. Proceedings of the third IFIP TC 6/WG 6.1 international conference on open distributed processing, 1994},
+%	year		= {1995},
+%	publisher	= {Springer US},
+%	address		= {Boston, MA},
+%	pages		= {3--14},
+%	isbn		= {978-0-387-34882-7},
+%	doi			= {10.1007/978-0-387-34882-7_1},
+%	url			= {https://doi.org/10.1007/978-0-387-34882-7_1}
+%}
+
+
 \subsection{Arquitetura de Referência}
 Uma arquitetura de referência consiste em uma forma de apresentar um padrão genérico para um projeto \cite{zambiasi}. Com base nessa arquitetura, o desenvolvedor projeta, desenvolve e configura uma aplicação prototipando-a por meio de componentes reutilizáveis \cite{zambiasi}. Para compor uma arquitetura de referência é necessário apresentar os tipos dos elementos envolvidos, como eles interagem e o mapeamento das funcionalidades para estes elementos \cite{Hofmeister:1999:ASA:322640}. De maneira geral, uma arquitetura de referência deve abordar os requisitos para o desenvolvimento de soluções, guiado pelo modelo de referência e por um estilo arquitetural de forma a atender as necessidades do projeto \cite{c._k_f._2006}.\par
 
