--- a/references.bib
+++ b/references.bib
@@ -1,411 +1,254 @@
-%start introduction%
 @article{D&T,
-	title = {Heurística para avaliação de usabilidade em interfaces de aplicativos smartphones: utilidade, produtividade e imersão},
-	author = {Valéria Feijó, Berenice Gonçalves e Luiz Gomez},
-	journal = {Design e Tecnologia},
-	volume = {3},
-	number = {06},
-	year = {2013},
+	title 	 = {Heurística para avaliação de usabilidade em interfaces de aplicativos smartphones: utilidade, produtividade e imersão},
+	author 	 = {Valéria Feijó, Berenice Gonçalves e Luiz Gomez},
+	journal  = {Design e Tecnologia},
+	volume 	 = {3},
+	number 	 = {06},
+	year 	 = {2013},
 	keywords = {Usabilidade, Avaliação, Heurísticas, Aplicativos},
-	abstract = {As discussões em torno das novas tecnologias e das grandes mudanças culturais da sociedade contemporânea que delas resultam têm aumentado nos últimos anos, na medida em que se percebe o aumento do uso dos smartphones, que são incorporados ao cotidiano dos indivíduos e que constroem novas relações entre recepção, produção e disseminação de conteúdos. É neste panorama que surgem os app (aplicativos móveis), cujo desenvolvimento demanda atenção especial a questões de usabilidade, conteúdo e experiência do usuário. O presente artigo tem como objetivo avaliar a interface de aplicativos de conteúdo de instituições de ensino superior do sul do Brasil, das categorias de utilidade, produtividade e imersão, a partir da análise, baseada no estudo do GQS/INCoD/UFSC e verificar se o conjunto de heurísticas de usabilidade proposto possui alguma limitação em relação a avaliação de diferentes categorias de aplicativos. Os resultados mostraram que existem sim limitações, mas estas são pequenas e podem ser sanadas se os avaliadores souberem adaptar melhor as ferramentas ao contexto de avaliação.},
-	issn = {2178-1974},
-	pages = {33--42},
-	doi = {10.23972/det2013iss06pp33-42},
-	note = "[Online; acessado em 22/07/2017]",
-	howpublished = "\url{https://www.ufrgs.br/det/index.php/det/article/view/141}"
+	issn 	 = {2178-1974},
+	pages 	 = {33--42},
+	doi 	 = {10.23972/det2013iss06pp33-42},
+	note 	 = "Acessado em: 22/07/2017. Disponível em: https://www.ufrgs.br/det/index.php/det/article/view/141"
 }
 
-%Ref: do computador ao tablet%
-@misc{countinho_e_junior,
-	author = {COUTINHO, Clara P.; BOTTENTUIT JUNIOR, João B},
-	title = {As Ferramentas da Web 2.0 no apoio à Tutoria na Formação em E-learning},
-	editor = {Hershey, New York},
-	journal = {Information Science Reference - IGI Global},
-	howpublished = "E-Learning 2.0"
-}
-
-%Ref: do computador ao tablet%
-@misc{moura_2011,
-	title = {Apropriação do Telemóvel como Ferramenta de Mediação em Mobile Learning: Estudos de Caso em Contexto Educativo},
-	author = {MOURA, Adelina Maria Carreiro},
-	date = {2011},
-	publisher = {Tese de Doutoramento em Ciências da Educação, na Especialidade de Tecnologia Educativa Braga: Universidade do Minho. Instituto de Educação}
-}
-
-%Ref: http://www.redalyc.org/pdf/1801/180114100003.pdf%
-@misc{levy_2002,
-	title = {Cyberdémocratie},
-	url = {http://www.electropublication.net/sociologie-Pierre-levy.html},
-	journal = {Pierre LEVY - cyberdemocratie},
-	author = {LEVY, Pierre},
-	editor = {Paris: Odile Jacob},
-	year = {2002}
-}
-%end introduction%
-
-%start bibliography%
 @online{doc_qt_io,
-    author = "Qt",
-    title  = "QML Applications",
-    month  = "jan",
-    year   = "2018",
-    url    = "http://doc.qt.io/qt-5/qmlapplications.html"
+    title   = {About qml applications},
+   	note 	= "Acessado em: 06/01/2018. Disponível em: http://doc.qt.io/qt-5/qmlapplications.html"
 }
 
-@misc{qt_software,
-    author = "Wikipedia",
-    title  = "About Qt (software)",
-    month  = "jan",
-    year   = "2018",
-    url    = "https://en.wikipedia.org/wiki/Qt_(software)",
-    	howpublished = "\url{https://en.wikipedia.org/wiki/Qt_(software)}"
+@online{qt_software,
+    title   = {About Qt},
+	note 	= "Acessado em: 06/01/2018. Disponível em: https://en.wikipedia.org/wiki/Qt\_(software)"
 }
 
-@misc{qt_io,
-    author = "The Qt Company",
-    title  = "Qt – Cross-platform software development for embedded and desktop",
-    month  = "jan",
-    year   = "2018",
-    url    = "https://www.qt.io/",
-	howpublished = "\url{https://www.qt.io/}"
+@online{qt_io,
+    title   = {Qt – Cross-platform software development for embedded and desktop},
+	note 	= "Acessado em: 06/01/2018. Disponível em: https://www.qt.io"
 }
 
 @online{qt_gui_toolkit,
-    author = "Linux Journal",
-    title  = "Qt GUI Toolkit",
-    month  = "jan",
-    year   = "2018",
-    url    = "http://www.linuxjournal.com/article/201",
-    	howpublished = "\url{http://www.linuxjournal.com/article/201}"
+    title   = {Qt Toolkit},
+	note 	= "Acessado em: 06/01/2018. Disponível em: http://www.linuxjournal.com/article/201"
 }
 
-@misc{jair_Cavalcanti_leite,
-	title = {Design da Arquitetura de Componentes de Software},
-	author = {Jair Cavalcanti Leite},
-	year = {2000},
-	howpublished = "\url{https://www.dimap.ufrn.br/~jair/ES/c7.html}"
+@online{jair_Cavalcanti_leite,
+	title 	= {Design da arquitetura de componentes},
+	note	= "Acessado em: 15/12/2017. Disponível em: https://www.dimap.ufrn.br/~jair/ES/c7.html"
 }
 
 @book{shaw_and_garlan,
-	title = {Software Architecture. Perspectives on an Emerging Discipline},
-	author = {Shaw M. and Garlan D.},
-	year = {1996},
-	publisher = {Prentice Hall},
-	editor = {Prentice Hall}
+	title	  = {Software Architecture. Perspectives on an Emerging Discipline},
+	author	  = {Shaw M. and Garlan D.},
+	year	  = {1996},
+	pages	  = {242},
+	publisher = {Prentice Hall}
 }
 
-@book{krafzig_and_banke_and_slama,
-	title = {Enterprise SOA: Service-Oriented Architecture Best Practices},
-	author = {Krafzig D. and Banke K. and Slama D.},
-	year = {2004},
-	publisher = {Prentice Hall},
-	editor = {Prentice Hall}
+@online{what_is_mobile,
+	title	  = {O que é um aplicativo móvel?},
+	note	  = "Acessado em: 11/07/2017. Disponível em: http://blog.stone.com.br/aplicativo-movel"
 }
 
-@article{queiroz_e_braga,
-	title = {Desenvolvimento de Linhas de Produtos de Software com uma Arquitetura Orientada a Serviços},
-	author = {Queiroz, P.G. e Braga, R.T.V},
-	journal = {13º Workshop de Teses e Dissertações em Engenharia de Software},
-	volume = {},
-	number = {},
-	pages = {},
-	year = {2008}
-}
-
-@misc{what_is_mobile,
-	title = {O que é um aplicativo móvel?},
-	author = {Maria Cecília Fernandes},
-	note = "[Online; acessado em 11/07/2017]",
-	howpublished = "\url{http://blog.stone.com.br/aplicativo-movel}",
-}
-
-@misc{ibm_research,
-	title = {Web Services Description Language (WSDL) 1.1},
-	journal = {Web Service Definition Language (WSDL)},
-	author = {Microsoft, Erik Christensen and IBM Research, Francisco Curbera and Microsoft, Greg Meredith and IBM Research, Sanjiva Weerawarana},
-	note = "[Online; acessado em 24/07/2017]",
-	howpublished = "\url{https://www.w3.org/TR/wsdl}"
+@online{ibm_research,
+	title 	  = {Web Services Description Language (WSDL) 1.1},
+	journal   = {Web Service Definition Language (WSDL)},
+	author    = {Erik Christensen and IBM Research, Francisco Curbera and Microsoft, Greg Meredith and IBM Research, Sanjiva Weerawarana},
+	note	  = "Acessado em: 24/07/2017. Disponível em: https://www.w3.org/TR/wsdl"
 }
 
 @article{rafael_heider,
-	author  = "Rafael Heider Barros Feijó",
-	title   = "Uma arquitetura de software baseada em componentes para   visualização de informações industriais",
-	journal = "Programa de Pós-Graduação em Engenharia Elétrica do Centro de Tecnologia da Universidade Federal do Rio Grande do Norte",
-	year    = "2007",
-	howpublished = "\url{ftp://ftp.ufrn.br/pub/biblioteca/ext/bdtd/RafaelHBF.pdf}"
+	author  	= {Rafael Heider Barros Feijó},
+	title   	= {Uma arquitetura de software baseada em componentes para visualização de informações industriais},
+	journal 	= {Programa de Pós-Graduação em Engenharia Elétrica do Centro de Tecnologia da UFRN},
+	year    	= {2007}
 }
 
 @article{szyperski_bosch_weck_1999,
-	title={Component-Oriented Programming},
-	url={http://oberon2005.oberoncore.ru/paper/cs1999.pdf},
-	DOI={10.1007/3-540-46589-8_10},
-	journal={Object-Oriented Technology ECOOP’99 Workshop Reader Lecture Notes in Computer Science}, author={Szyperski, Clemens and Bosch, Jan and Weck, Wolfgang},
-	year={1999},
-	pages={184–192},
-	howpublished = "\url{http://oberon2005.oberoncore.ru/paper/cs1999.pdf}"
-}
-
-@book{thomas,
-	title = {SOA Principles of Service Design},
-	author = {THOMAS, E.},
-	editor = {Prentice Hall},
-	year = {2007},
-	publisher = {New York}
+	title		= {Component-Oriented Programming},
+	url			= {http://oberon2005.oberoncore.ru/paper/cs1999.pdf},
+	DOI			= {10.1007/3-540-46589-8_10},
+	journal		= {Object-Oriented Technology ECOOP'99 Workshop Reader Lecture Notes in Computer Science},
+	author		= {Szyperski, Clemens and Bosch, Jan and Weck, Wolfgang},
+	year		= {1999},
+	pages		= {184–192}
 }
 
 @misc{fielding,
-	title = {Architectural styles and the design of network-based software architectures},
-	journal = {ACM Digital Library},
-	publisher = {University of California, Irvine},
-	author = {Fielding, Roy Thomas},
-	note = "[Online; acessado em 26/07/2017]",
-	howpublished = "\url{http://dl.acm.org/citation.cfm?id=932295}"
+	title 		 = {Architectural styles and the design of network-based software architectures},
+	journal	 	 = {ACM Digital Library},
+	publisher	 = {University of California, Irvine},
+	author		 = {Fielding, Roy Thomas},
+	note 		 = "Acessado em: 26/07/2017. Disponível em: http://dl.acm.org/citation.cfm?id=932295"
 }
 
 @inproceedings{Acer:2015:EES:2902314.2902344,
-	author = {Acer, Utku and Mashhadi, Afra and Forlivesi, Claudio and Kawsar, Fahim},
-	title = {Energy Efficient Scheduling for Mobile Push Notifications},
-	booktitle = {Proceedings of the 12th EAI International Conference on Mobile and Ubiquitous Systems: Computing, Networking and Services on 12th EAI International Conference on Mobile and Ubiquitous Systems: Computing, Networking and Services},
-	series = {MOBIQUITOUS\&\#39;15},
-	year = {2015},
-	isbn = {978-1-63190-072-3},
-	location = {Coimbra, Portugal},
-	pages = {100--109},
-	numpages = {10},
-	url = {http://dx.doi.org/10.4108/eai.22-7-2015.2260067},
-	doi = {10.4108/eai.22-7-2015.2260067},
-	acmid = {2902344},
-	publisher = {ICST (Institute for Computer Sciences, Social-Informatics and Telecommunications Engineering)},
-	address = {ICST, Brussels, Belgium, Belgium},
-	keywords = {activity prediction, energy efficiency, network sensing, push notification},
+	author 		= {Acer, Utku and Mashhadi, Afra and Forlivesi, Claudio and Kawsar, Fahim},
+	title 		= {Energy Efficient Scheduling for Mobile Push Notifications},
+	booktitle 	= {Proceedings of the 12th EAI International Conference on Mobile and Ubiquitous Systems: Computing, Networking and Services on 12th EAI International Conference on Mobile and Ubiquitous Systems: Computing, Networking and Services},
+	year 		= {2015},
+	pages 		= {100--109},
+	numpages 	= {10},
+	url 		= {http://dx.doi.org/10.4108/eai.22-7-2015.2260067},
+	publisher 	= {ICST (Institute for Computer Sciences, Social-Informatics and Telecommunications Engineering)},
 }
 
 @book{wfmmc,
-	title = {BPM CBOK - Guide to the Business Process Management Common Body of Knowledge},
-	author = {Business Process Management},
-	data = {2009}
+	title 		= {BPM CBOK - Guide to the Business Process Management Common Body of Knowledge},
+	author  	= {Business Process Management},
+	year 		= {2013},
+	pages		= {446},
+	publisher	= {Createspace Independent Publishing Platform}
 }
 
-@misc{perepletchikov,
-	author = {Perepletchikov, M.; Ryan, C.},
-	title = {A controlled experiment for evaluating the impact of coupling on the maintainability of service-oriented software.},
-	journal = {IEEE Transactions on Software Engineering},
-	volume = {37},
-	number = {04},
-	year = {2011},
-	pages = {449–465}
+@article{perepletchikov,
+	author		= {Perepletchikov, M.; Ryan, C.},
+	title		= {A controlled experiment for evaluating the impact of coupling on the maintainability of service-oriented software.},
+	journal		= {IEEE Transactions on Software Engineering},
+	year		= {2011},
+	pages		= {449–465}
 }
 
-@misc{jun_y_zhishu,
-	author = {Jun, Y.; Zhishu, L.; Yanyan, M.},
-	title = {Json based decentralized sso security architecture in e-commerce.},
-	journal = {In: Proceedings of the 2008 International Symposium on Electronic Commerce and Security - ISECS '08, Washington, DC, USA: IEEE Computer Society},
-	year = {2008},
-	pages = {471–475},
-	howpublished = "\url{http://dx.doi.org/10.1109/ISECS.2008.171}"
-}
-
-@book{B'far:2004:MCP:975108,
-	author = {B'far, Reza},
-	title = {Mobile Computing Principles: Designing and Developing Mobile Applications with UML and XML},
-	year = {2004},
-	isbn = {0521817331, 9780521817332},
-	publisher = {Cambridge University Press},
-	address = {New York, NY, USA},
-	howpublished = "\url{http://dl.acm.org/citation.cfm?id=975108}"
+@article{jun_y_zhishu,
+	author 		= {Jun, Y.; Zhishu, L.; Yanyan, M.},
+	title 		= {Json based decentralized sso security architecture in e-commerce.},
+	journal 	= {In: Proceedings of the 2008 International Symposium on Electronic Commerce and Security - ISECS '08, Washington, DC, USA: IEEE Computer Society},
+	year 		= {2008},
+	pages 		= {471–475}
 }
 
 @inproceedings{Pabllo:2008:MMA:1621087.1621128,
-	author = {Pabllo, Cayo and Soto, Rafael and Campos, Jorge},
-	title = {Mobile Medication Administration System: Application and Architecture},
-	booktitle = {Proceedings of the 2008 Euro American Conference on Telematics and Information Systems},
-	series = {EATIS '08},
-	year = {2008},
-	isbn = {978-1-59593-988-3},
-	location = {Aracaju, Brazil},
-	pages = {41:1--41:4},
-	articleno = {41},
-	numpages = {4},
-	url = {http://doi.acm.org/10.1145/1621087.1621128},
-	doi = {10.1145/1621087.1621128},
-	acmid = {1621128},
-	publisher = {ACM},
-	address = {New York, NY, USA},
-	keywords = {medication adminstration system, mobile HCI, mobile architecture, mobile computing},
-	howpublished = "\url{http://dl.acm.org/citation.cfm?id=1621128}"
+	author 		= {Pabllo, Cayo and Soto, Rafael and Campos, Jorge},
+	title 		= {Mobile Medication Administration System: Application and Architecture},
+	booktitle 	= {Proceedings of the 2008 Euro American Conference on Telematics and Information Systems},
+	series 		= {EATIS '08},
+	year 		= {2008},
+	pages 		= {41:1--41:4},
+	url 		= {http://doi.acm.org/10.1145/1621087.1621128},
+	doi 		= {10.1145/1621087.1621128},
+	publisher 	= {ACM},
+	address 	= {New York, NY, USA},
+	url 		= "\url{http://dl.acm.org/citation.cfm?id=1621128}"
 }
 
-@misc{governanadetidotcom,
-	title = {Gerenciando Projetos com PMBOK},
-	url = {http://www.governancadeti.com/2011/03/gerenciando-projetos-com-pmbok/},
-	author = {GTI, governancadeti.com},
-	urldate = {"14/08/2017"},
-	note = "[Online; acessado em 14/08/2017]",
-	howpublished = "\url{http://www.governancadeti.com/2011/03/gerenciando-projetos-com-pmbok/}"
+@online{governanadetidotcom,
+	title 		= {Gerenciando Projetos com PMBOK},
+	note 		= "Acessado em 14/08/2017. Disponível em: http://www.governancadeti.com/2011/03/gerenciando-projetos-com-pmbok/"
 }
 
-@misc{qt_overviews,
-	title = {Documentação do Qt. Visão geral e Melhores práticas},
-	url = {http://doc.qt.io/qt-5/overviews-main.html},
-	journal = {Qt Overviews | Qt 5.9},
-	note = "[Online; acessado em 21/08/2017]",
-	howpublished = "\url{http://doc.qt.io/qt-5/overviews-main.html}"
+@online{qt_overviews,
+	title 		= {Qt Documentation | Qt Overviews},
+	note 		= "Acessado em: 21/08/2017. Disponível em: http://doc.qt.io/qt-5/overviews-main.html"
 }
 
 @inproceedings{Kronbauer:2012:UEE:2393536.2393582,
-	author = {Kronbauer, Artur Henrique and Santos, Celso A. S. and Vieira, Vaninha},
-	title = {Um Estudo Experimental De Avalia\c{C}\~{A}O Da Experi\^{E}Ncia Dos Usu\'{A}Rios De Aplicativos M\'{O}Veis a Partir Da Captura Autom\'{A}Tica Dos Dados Contextuais e De Intera\c{C}\~{A}O},
-	booktitle = {Proceedings of the 11th Brazilian Symposium on Human Factors in Computing Systems},
-	series = {IHC '12},
-	year = {2012},
-	isbn = {978-85-7669-262-1},
-	location = {Cuiaba, Brazil},
-	pages = {305--314},
-	numpages = {10},
-	url = {http://dl.acm.org/citation.cfm?id=2393536.2393582},
-	acmid = {2393582},
-	publisher = {Brazilian Computer Society},
-	address = {Porto Alegre, Brazil, Brazil},
-	keywords = {automatic evaluation, experience sampling method, integrating IHC and software engineering, interacting with new devices, interfaces for mobile and ambient systems, logging, usability evaluation, user experience}
+	author 		= {Kronbauer, Artur Henrique and Santos, Celso A. S. and Vieira, Vaninha},
+	title 		= {Um Estudo Experimental De Avaliação Da Experiência Dos Usuários De Aplicativos Móveis a Partir Da Captura Automática Dos Dados Contextuais e De Interação},
+	booktitle 	= {Proceedings of the 11th Brazilian Symposium on Human Factors in Computing Systems},
+	series 		= {IHC '12},
+	year 		= {2012},
+	pages 		= {305--314},
+	url 		= {http://dl.acm.org/citation.cfm?id=2393536.2393582},
+	publisher 	= {Brazilian Computer Society},
+	address 	= {Porto Alegre-RS, Brazil}
 }
 
 @inproceedings{Vermeeren:2010:UEE:1868914.1868973,
-	author = {Vermeeren, Arnold P. O. S. and Law, Effie Lai-Chong and Roto, Virpi and Obrist, Marianna and Hoonhout, Jettie and V\"{a}\"{a}n\"{a}nen-Vainio-Mattila, Kaisa},
-	title = {User Experience Evaluation Methods: Current State and Development Needs},
-	booktitle = {Proceedings of the 6th Nordic Conference on Human-Computer Interaction: Extending Boundaries},
-	series = {NordiCHI '10},
-	year = {2010},
-	isbn = {978-1-60558-934-3},
-	location = {Reykjavik, Iceland},
-	pages = {521--530},
-	numpages = {10},
-	url = {http://doi.acm.org/10.1145/1868914.1868973},
-	doi = {10.1145/1868914.1868973},
-	acmid = {1868973},
-	publisher = {ACM},
-	address = {New York, NY, USA},
-	keywords = {evaluation method, methodological development needs, user experience}
+	author 		= {Vermeeren, Arnold P. O. S. and Law, Effie Lai-Chong and Roto, Virpi and Obrist, Marianna and Hoonhout, Jettie and V\"{a}\"{a}n\"{a}nen-Vainio-Mattila, Kaisa},
+	title 		= {User Experience Evaluation Methods: Current State and Development Needs},
+	booktitle 	= {Proceedings of the 6th Nordic Conference on Human-Computer Interaction: Extending Boundaries},
+	series 		= {NordiCHI '10},
+	year 		= {2010},
+	pages 		= {521--530},
+	url 		= {http://doi.acm.org/10.1145/1868914.1868973},
+	publisher 	= {ACM},
+	address 	= {New York, NY, USA}
 }
 
 @article{McCarthy:2004:TE:1015530.1015549,
-	author = {McCarthy, John and Wright, Peter},
-	title = {Technology As Experience},
-	journal = {interactions},
-	issue_date = {September + October 2004},
-	volume = {11},
-	number = {5},
-	month = sep,
-	year = {2004},
-	issn = {1072-5520},
-	pages = {42--43},
-	numpages = {2},
-	url = {http://doi.acm.org/10.1145/1015530.1015549},
-	doi = {10.1145/1015530.1015549},
-	acmid = {1015549},
-	publisher = {ACM},
-	address = {New York, NY, USA}
+	author 		= {McCarthy, John and Wright, Peter},
+	title 		= {Technology As Experience},
+	journal 	= {interactions},
+	issue_date 	= {September + October 2004},
+	volume 		= {11},
+	number 		= {5},
+	month 		= {sep},
+	year 		= {2004},
+	pages 		= {42--43},
+	url 		= {http://doi.acm.org/10.1145/1015530.1015549},
+	publisher 	= {ACM},
+	address 	= {New York, NY, USA}
 }
 
 @article{zambiasi,
-	author  = {Zambiasi, Saulo Popov},
-	title   = {Uma arquitetura de referência para softwares assistentes pessoais baseada na arquitetura orientada a serviços},
-	journal = {Tese (doutorado) - Universidade Federal de Santa Catarina, Centro Tecnológico. Programa de Pós-Graduação em Engenharia de Automação e Sistemas},
-	year    = {2012},
-	pages   = {331},
-	number  = {77},
-	note    = {https://repositorio.ufsc.br/handle/123456789/99348}
+	author  	= {Zambiasi, Saulo Popov},
+	title   	= {Uma arquitetura de referência para softwares assistentes pessoais baseada na arquitetura orientada a serviços},
+	journal 	= {Tese (doutorado) - UFSC, Centro Tecnológico. Programa de Pós-Graduação em Engenharia de Automação e Sistemas},
+	year    	= {2012},
+	pages   	= {331},
+	number  	= {77},
+	url     	= {https://repositorio.ufsc.br/handle/123456789/99348}
 }
 
 @book{Hofmeister:1999:ASA:322640,
-	author = {Hofmeister, Christine and Nord, Robert and Soni, Dilip},
-	title = {Applied Software Architecture},
-	year = {2000},
-	isbn = {0-201-32571-3},
-	publisher = {Addison-Wesley Longman Publishing Co., Inc.},
-	address = {Boston, MA, USA},
+	author 		= {Hofmeister, Christine and Nord, Robert and Soni, Dilip},
+	title 		= {Applied Software Architecture},
+	month		= {nov},
+	year 		= {2000},
+	isbn 		= {0-201-32571-3},
+	edition 	= {1st},
+	publisher 	= {Addison-Wesley Longman Publishing Co., Inc.},
+	address 	= {Boston, MA, USA},
+	pages		= {432}
 }
 
-@misc{c._k_f._2006,
-	title = {Reference Model for Service Oriented Architecture},
-	url = {https://docs.oasis-open.org/soa-rm/v1.0/soa-rm.html},
-	journal = {Reference Model for Service Oriented Architecture v1.0},
-	publisher = {Oasis Open},
-	author = {C., MacKenzie and K, Laskey and F., McCabe},
-	year = {2006},
-	month = {Oct},
-	howpublished = "\url{https://docs.oasis-open.org/soa-rm/v1.0/soa-rm.html}"
+@article{c._k_f._2006,
+	title 		= {Reference Model for Service Oriented Architecture},
+	month 		= {oct},
+	year 		= {2006},
+	note 	 	= "Acessado em: 10/01/2018. Disponível em: https://docs.oasis-open.org/soa-rm/v1.0/soa-rm.html"
 }
 
 @book{D'Souza:1998:OCF:291139,
-	author = {D'Souza, Desmond F. and Wills, Alan Cameron},
-	title = {Objects, Components, and Frameworks with UML: The Catalysis Approach},
-	year = {1999},
-	isbn = {0-201-31012-0},
-	publisher = {Addison-Wesley Longman Publishing Co., Inc.},
-	address = {Boston, MA, USA},
-	url = {https://dl.acm.org/citation.cfm?id=291139}
+	author 		= {D'Souza, Desmond F. and Wills, Alan Cameron},
+	title 		= {Objects, Components, and Frameworks with UML: The Catalysis Approach},
+	year 		= {1999},
+	isbn 		= {0-201-31012-0},
+	publisher 	= {Addison-Wesley Longman Publishing Co., Inc.},
+	address		= {Boston, MA, USA},
+	url 		= {https://dl.acm.org/citation.cfm?id=291139}
 }
 
 @book{laudon,
-    author    = {LAUDON, Kenneth C.; LAUDON, Jane Price.},
-    title     = {SISTEMAS DE INFORMAÇÃO: COM INTERNET},
-    year      = {1999},
-	publisher = {LTC},
-    volume    = {Unico},
-    address   = {Rio de Janeiro, Brasil},
-    edition   = {fourth}
+    author		= {Kenneth C. Laudon; Jane Price Laudon},
+    title		= {Sistemas de Informação},
+    year		= {1999},
+	publisher	= {LTC},
+    volume		= {Unico},
+    address		= {Rio de Janeiro, Brasil},
+    edition 	= {fourth}
 }
-%end bibliography
 
-%start related works%
 @misc{melotti_2014,
-	title 		 = {CReAMA: Uma Arquitetura de Referência para o Desenvolvimento de Sistemas Colaborativos Móveis Baseados em Componentes.},
-	author		 = {MELOTTI, M.},
-	url 			 = {http://repositorio.ufes.br/handle/10/4270},
-	journal		 = {riUfes: Home},
-	publisher 	 = {Universidade Federal do Espírito Santo},
-	year			 = {2014}
+	title		= {CReAMA: Uma Arquitetura de Referência para o Desenvolvimento de Sistemas Colaborativos Móveis Baseados em Componentes.},
+	author		= {MELOTTI, M.},
+	url			= {http://repositorio.ufes.br/handle/10/4270},
+	journal		= {riUfes: Home},
+	publisher 	= {Universidade Federal do Espírito Santo},
+	year		= {2014}
 }
 
 @misc{jauridacruzjunior,
-    author  	= {Jauri Da Cruz Júnior},
-    title   = {Solução Multiplataforma Para Smartphone Utilizando Os Frameworks Sencha Touch E Phonegap Integrado À Tecnologia Web Service Java},
-    journal = {TCC, Análise e Desenvolvimento de Sistemas. Instituto Municipal de Ensino Superior de Assis},
-    year    = {2014}
-}
-%end related works%
-
-
-@misc{guideline:architectural_view,
-	title = {Guideline: Architectural View},
-	url = {http://epf.eclipse.org/wikis/openuppt/openup_basic/guidances/guidelines/architectural_view,_T9nygClEEduLGM8dfVsrKg.html},
-	journal = {Guideline: Architectural View},
-	howpublished = "\url{http://epf.eclipse.org/wikis/openuppt/openup_basic/guidances/guidelines/architectural_view,_T9nygClEEduLGM8dfVsrKg.html}",
-	note = "[Online; acessado em 04/10/2017]",
-	note = {http://epf.eclipse.org/wikis/openuppt/openup_basic/guidances/guidelines/architectural_view,_T9nygClEEduLGM8dfVsrKg.html},
-}
-
-@Inbook{Raymond1995,
-	author="Raymond, Kerry",
-	editor="Raymond, Kerry
-	and Armstrong, Liz",
-	title="Reference Model of Open Distributed Processing (RM-ODP): Introduction",
-	bookTitle="Open Distributed Processing: Experiences with distributed environments. Proceedings of the third IFIP TC 6/WG 6.1 international conference on open distributed processing, 1994",
-	year="1995",
-	publisher="Springer US",
-	address="Boston, MA",
-	pages="3--14",
-	abstract="The Reference Model of Open Distributed Processing (RM-ODP) was a joint effort by the international standards bodies ISO and ITU-T to develop a coordinating framework for the standardisation of open distributed processing (ODP). The model describes an architecture within which support of distribution, interworking, interoperability and portability can be integrated. The RM-ODP framework defines ODP concerns using five ``viewpoints'' (abstractions), namely enterprise, information, computational, engineering, and technology. This tutorial introduces the reference model, describing the viewpoints and some of the ODP functions and transparencies.",
-	isbn="978-0-387-34882-7",
-	doi="10.1007/978-0-387-34882-7_1",
-	url="https://doi.org/10.1007/978-0-387-34882-7_1"
+    author		= {Jauri Da Cruz Júnior},
+    title   	= {Solução Multiplataforma Para Smartphone Utilizando Os Frameworks Sencha Touch E Phonegap Integrado À Tecnologia Web Service Java},
+    journal 	= {TCC, Análise e Desenvolvimento de Sistemas. Instituto Municipal de Ensino Superior de Assis},
+    year    	= {2014}
 }
 
 @misc{moca_2004,
-	title="MoCA: Uma Arquitetura para o Desenvolvimento de Aplicações Sensíveis ao Contexto para Dispositivos Móveis.",
-	author="Rodrigues, Vagner José do Sacramento",
-	url="http://eds.a.ebscohost.com/eds/detail/detail?vid=1&sid=9e4ec8d5-8c8d-4a45-a23b-b66b66521b42%40sessionmgr4007&bdata=Jmxhbmc9cHQtYnImc2l0ZT1lZHMtbGl2ZSZzY29wZT1zaXRl#db=cat04685a&AN=puc.168116",
-	publisher="Rio de Janeiro. PUC, Dep. de Informática, 2004.",
-	year="2004",
-	howpublished="\url{http://eds.a.ebscohost.com/eds/detail/detail?vid=1&sid=9e4ec8d5-8c8d-4a45-a23b-b66b66521b42%40sessionmgr4007&bdata=Jmxhbmc9cHQtYnImc2l0ZT1lZHMtbGl2ZSZzY29wZT1zaXRl#db=cat04685a&AN=puc.168116}"
+	title		= {MoCA: Uma Arquitetura para o Desenvolvimento de Aplicações Sensíveis ao Contexto para Dispositivos Móveis},
+	author		= {Rodrigues, Vagner José do Sacramento},
+	url = {http://eds.a.ebscohost.com/eds/detail/detail?vid=1&sid=9e4ec8d5-8c8d-4a45-a23b-b66b66521b42%40sessionmgr4007&bdata=Jmxhbmc9cHQtYnImc2l0ZT1lZHMtbGl2ZSZzY29wZT1zaXRl#db=cat04685a&AN=puc.168116},
+	publisher	= {Rio de Janeiro. PUC, Dep. de Informática, 2004.},
+	year		= {2004}
 }
